<resources>
    <string name="app_name">Barcode Scanner X</string>
    <string name="action_settings">Settings</string>
    <string name="default_desc">Align the barcode within the square</string>
    <string name="action_photo_desc">Photo</string>
    <string name="action_light_on_desc">On</string>
    <string name="action_light_off_desc">Off</string>
    <string name="action_produce_desc">Create</string>
    <string name="label_format">format:{format}</string>
    <string name="label_meta">meta:{meta}</string>
    <string name="label_code_value">https://www.google.com</string>
    <string name="label_time">time:{time}</string>
    <string name="label_type">type:{type}</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="scan_hint">Align the barcode within the square</string>
    <string name="flash_off">Flash off</string>
    <string name="about">Dynamsoft Barcode Reader Mobile App Demo (Dynamsoft Barcode Reader SDK v6.2.0) \r\n © 2018 Dynamsoft All rights reserved. \r\n\r\n Integrate Barcode Reader Functionality into your own Mobile App? \r\n</string>
    <string name="download"></string>
    <string name="linear">Linear</string>
    <string name="qrcode">QRCode</string>
    <string name="pdf417">PDF417</string>
    <string name="datamatrix">DataMatrix</string>
    <string name="beep_sound">Beep Sound:</string>
    <string name="dynamsoft_website_url">https://www.dynamsoft.com/Products/barcode-scanner-sdk-android.aspx</string>
    <string name="dbr_license">f0068MgAAAE+6yk5Gn3IG+mevmaKs+7duqRT1WgoEYCrysRscljE8TD3ScqO9mdjNYA1ka0rJ+P/1byTC3Q0tScT5i66qIpE=
    </string>
    <string name="title_activity_decode_local_picture">DecodeLocalPicture</string>
    <string name="title_activity_barcode_type">BarcodeType</string>
    <string name="template_name">Template Name:</string>>
    <string name="barcode_format">&#160;&#160;&#160;&#160;&#160;&#160;Barcode Format:</string>
    <string name="oned">OneD</string>
    <string name="expected_barcode_count">Expected Barcodes Count:</string>
    <string name="timeout">Timeout:</string>
    <string name="deblurlevel">DeblurLevel:</string>
    <string name="anti_damage_level">Anti-Damage Level:</string>
    <string name="text_filter_mode">Text Filter Mode:</string>
    <string name="region_predetection_mode">Region Predetection Mode:</string>
    <string name="scale_down_Threshold">Scale Down Threshold:</string>
    <string name="colour_image_convert_mode">Colour Image Convert Mode:</string>
    <string name="barcode_invert_mode">Barcode Invert Mode:</string>
    <string name="gray_equalization_sensitivity">Gray Equalization Sensitivity:</string>
    <string name="texture_detection_sensitivity">Texture Detection Sensitivity:</string>
    <string name="binarization_block_size">Binarization Block Size:</string>
    <string name="localization_algorithm_priority">Localization Algorithm Priority:</string>
    <string name="max_dimof_full_image_as_barcode_zone">Max Dim Of Full Image As \nBarcode Zone:</string>
    <string name="max_barcode_count">Max Barcodes Count:</string>
    <string name="enable_fill_binary_vacancy">Enable Fill Binary Vacancy:</string>
    <string name="code_39">CODE_39</string>
    <string name="code_128">CODE_128</string>
    <string name="code_93">CODE_93</string>
    <string name="codabar">CODABAR</string>
    <string name="itf">ITF</string>
    <string name="ean_13">EAN_13</string>
    <string name="ean_8">EAN_8</string>
    <string name="upc_a">UPC_A</string>
    <string name="upc_e">UPC_E</string>
    <string name="industrial_25">INDUSTRIAL_25</string>
    <string name="aztec">AZTEC</string>
    <string name="connectedblock">ConnectedBlock</string>
    <string name="lines">Lines</string>
    <string name="statistics">Statistics</string>
    <string name="fullimageasbarcodezone">FullImageAsBarcodeZone</string>
    <string name="multi_barcodes_best_coverage">Best Coverage</string>
    <string name="general_scan">General Scan</string>
    <string name="overlap">Overlap</string>
    <string name="panorma">Panorma</string>
    <string name="one_off_scan">One-off scan to find at least 1 barcode</string>
    <string name="one_off_scan_with_a_thorough_search">One-off scan with a thorough search</string>
    <string name="continuous_scan_filter_duplicates">Continuous scan; filter duplicates</string>
    <string name="advanced_mode">Advanced mode with all the possible settings</string>
    <string name="continuous_scan_stitch_video_frames">Continuous scan; stitch video frames</string>
    <string name="custom">Customized</string>
    <string name="add_now">Add Now</string>
    <string name="start_to_scan_some_barcodes">Start to scan some barcodes</string>
    <string name="you_have_no_files">You have no files</string>
    <string name="title_activity_simple_setting">SimpleSettingActivity</string>
    <string name="general_show_detail">Scan in single frame with the default settings of our SDK.</string>
    <string name="best_coverage_show_detail">Scan in single frame with the best efforts of our SDK.</string>
    <string name="overlap_show_detail">Scan in multiple frames with the best efforts of our SDK. This mode works the best for multiple barcodes on 1 image. All barcode results will be added up and saved to history.</string>
    <string name="custom_show_detai">With this advanced mode, you get to know Dynamsoft Barcode Reader SDK with its flexible decode settings. Both single-frame and multi-frame scanning is supported.</string>
    <string name="expected_barcode_count_tip">The expected number of barcodes to read for each image (0 represents at least 1 barcode)</string>
    <string name="timeout_tip">Sets the maximum amount of time (in milliseconds) it should spend searching for a barcode per page.</string>
    <string name="deblur_level_tip">Higher deblur level will reach a better deblur ability during decoding.</string>
    <string name="anti_damage_level_tip">More localization algorithm will be used in the case of a higher anti-damage level.</string>
    <string name="text_filter_mode_tip">Whether to filter text to obtain a clearer image for decoding.</string>
    <string name="region_predetection_mode_tip">Whether to pre-detect existing region for barcodes search.</string>
    <string name="scale_down_threshold_tip">Sets the threshold value of the image shrinking. If the shorter edge size is larger than the given value, the library will calculate the required height and width of the barcode image and shrink the image to that size before localization. Otherwise, it will perform barcode localization on the original image.</string>
    <string name="colour_image_convert_mode_tip">Sets whether to convert colour images to grayscale which is used in region pre-detection.</string>
    <string name="barcode_invert_mode_tip">The ink colour for barcodes search.</string>
    <string name="gray_equalization_sensitivity_tip">Sets the sensitivity used for gray equalization. The higher the value, the more likely gray equalization will be activated. Effective for images with low comparison between black and white colour. May cause adverse effect on images with high level of black and white colour comparison.</string>
    <string name="texture_detection_sensitivity_tip">The higher value you set, the more efforts it will take to detect texture.</string>
    <string name="binarization_block_size_tip">Set the block size for the process of binarization. Block size means the size of a pixel neighborhood that is used to calculate a threshold value for the pixel.</string>
    <string name="localization_algorithm_priority_tip">Sets the priority of localization algorithms to decide the ordering of the following four localization algorithms.</string>
    <string name="max_barcode_count_tip">Sets the maximum number of barcodes to read. This will limit the number of barcodes returned by library.</string>
    <string name="enable_fill_binary_vacancy_tip">Sets whether to enable fill binary vacancy.</string>
    <string name="if_multi_frame">If multi frame:</string>
    <string name="if_multi_frame_tip">Whether to scan barcode in multi-frame modes.</string>
    <string name="beep_sound_tip">Whether to beep once a barcode is found.</string>
    <string name="custom_tips">Please modify the settings below according to your usage scenario and click on "Done" to scan barcode.</string>
    <string name="mode">Mode:</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
