<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="#FFFFFF"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin">

	<android.support.v7.widget.Toolbar
		android:id="@+id/barcodetypetoolbar"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="?attr/colorPrimary"
		app:navigationIcon="@drawable/ic_action_back"
		app:popupTheme="@style/AppTheme.PopupOverlay"
		/>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<TableLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:stretchColumns="0">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="30dp"
				android:background="#fff3f3f3"
				android:textColor="#ff7c7c7c"
				android:gravity="start|center_vertical"
				android:text="@string/oned"/>
			<TableRow>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="@dimen/textview_width"
					android:layout_marginLeft="20dp"
					android:layout_marginStart="20dp"
					android:gravity="start|center_vertical"
					android:textColor="@color/colorPrimaryDark"
					android:textSize="15sp"
					android:text="@string/code_39" />
				<CheckBox
					android:id="@+id/ckbcode39"
					android:layout_width="match_parent"
					android:layout_height="@dimen/textview_width"/>
			</TableRow>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="@dimen/borden_height"
				android:background="#fff3f3f3" />
			<TableRow>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="@dimen/textview_width"
					android:layout_marginLeft="20dp"
					android:layout_marginStart="20dp"
					android:gravity="start|center_vertical"
					android:textColor="@color/colorPrimaryDark"
					android:textSize="15sp"
					android:text="@string/code_128" />
				<CheckBox
					android:id="@+id/ckbcode128"
					android:layout_width="match_parent"
					android:layout_height="@dimen/textview_width"/>
			</TableRow>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="@dimen/borden_height"
				android:background="#fff3f3f3" />
			<TableRow>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="@dimen/textview_width"
					android:layout_marginLeft="20dp"
					android:layout_marginStart="20dp"
					android:gravity="start|center_vertical"
					android:textColor="@color/colorPrimaryDark"
					android:textSize="15sp"
					android:text="@string/code_93" />
				<CheckBox
					android:id="@+id/ckbcode93"
					android:layout_width="match_parent"
					android:layout_height="@dimen/textview_width"/>
			</TableRow>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="@dimen/borden_height"
				android:background="#fff3f3f3" />
			<TableRow>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="@dimen/textview_width"
					android:layout_marginLeft="20dp"
					android:layout_marginStart="20dp"
					android:gravity="start|center_vertical"
					android:textColor="@color/colorPrimaryDark"
					android:textSize="15sp"
					android:text="@string/codabar" />
				<CheckBox
					android:id="@+id/ckbcodabar"
					android:layout_width="match_parent"
					android:layout_height="@dimen/textview_width"/>
			</TableRow>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="@dimen/borden_height"
				android:background="#fff3f3f3" />
			<TableRow>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="@dimen/textview_width"
					android:layout_marginLeft="20dp"
					android:layout_marginStart="20dp"
					android:gravity="start|center_vertical"
					android:textColor="@color/colorPrimaryDark"
					android:textSize="15sp"
					android:text="@string/itf" />
				<CheckBox
					android:id="@+id/ckbitf"
					android:layout_width="match_parent"
					android:layout_height="@dimen/textview_width"/>
			</TableRow>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="@dimen/borden_height"
				android:background="#fff3f3f3" />
			<TableRow>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="@dimen/textview_width"
					android:layout_marginLeft="20dp"
					android:layout_marginStart="20dp"
					android:gravity="start|center_vertical"
					android:textColor="@color/colorPrimaryDark"
					android:textSize="15sp"
					android:text="@string/ean_13" />
				<CheckBox
					android:id="@+id/ckbean13"
					android:layout_width="match_parent"
					android:layout_height="@dimen/textview_width"/>
			</TableRow>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="@dimen/borden_height"
				android:background="#fff3f3f3" />
			<TableRow>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="@dimen/textview_width"
					android:layout_marginLeft="20dp"
					android:layout_marginStart="20dp"
					android:gravity="start|center_vertical"
					android:textColor="@color/colorPrimaryDark"
					android:textSize="15sp"
					android:text="@string/ean_8" />
				<CheckBox
					android:id="@+id/ckbean8"
					android:layout_width="match_parent"
					android:layout_height="@dimen/textview_width"/>
			</TableRow>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="@dimen/borden_height"
				android:background="#fff3f3f3" />
			<TableRow>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="@dimen/textview_width"
					android:layout_marginLeft="20dp"
					android:layout_marginStart="20dp"
					android:gravity="start|center_vertical"
					android:textColor="@color/colorPrimaryDark"
					android:textSize="15sp"
					android:text="@string/upc_a" />
				<CheckBox
					android:id="@+id/ckbupca"
					android:layout_width="match_parent"
					android:layout_height="@dimen/textview_width"/>
			</TableRow>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="@dimen/borden_height"
				android:background="#fff3f3f3" />
			<TableRow>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="@dimen/textview_width"
					android:layout_marginLeft="20dp"
					android:layout_marginStart="20dp"
					android:gravity="start|center_vertical"
					android:textColor="@color/colorPrimaryDark"
					android:textSize="15sp"
					android:text="@string/upc_e" />
				<CheckBox
					android:id="@+id/ckbupce"
					android:layout_width="match_parent"
					android:layout_height="@dimen/textview_width"/>
			</TableRow>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="@dimen/borden_height"
				android:background="#fff3f3f3" />
			<TableRow>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="@dimen/textview_width"
					android:layout_marginLeft="20dp"
					android:layout_marginStart="20dp"
					android:gravity="start|center_vertical"
					android:textColor="@color/colorPrimaryDark"
					android:textSize="15sp"
					android:text="@string/industrial_25" />
				<CheckBox
					android:id="@+id/ckbindustrial25"
					android:layout_width="match_parent"
					android:layout_height="@dimen/textview_width"/>
			</TableRow>
		</TableLayout>
	</ScrollView>
</LinearLayout>
