<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<android.support.v7.widget.RecyclerView
		android:id="@+id/rl_history"
		android:layout_width="match_parent"
		android:layout_height="match_parent"/>
	<ProgressBar
		android:visibility="gone"
		android:layout_centerInParent="true"
		android:id="@+id/pb_progress"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		/>
	<ImageView
		android:id="@+id/iv_empty"
		android:layout_width="250dp"
		android:layout_height="150dp"
		android:layout_marginTop="80dp"
		android:layout_centerHorizontal="true"
		android:src="@drawable/empty"/>
	<TextView
		android:id="@+id/tv_no_files"
		android:layout_width="wrap_content"
		android:layout_height="30dp"
		android:textSize="22sp"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="280dp"
		android:textColor="#000000"
		android:text="@string/you_have_no_files"/>
	<TextView
		android:id="@+id/tv_start"
		android:layout_width="wrap_content"
		android:layout_height="30dp"
		android:textSize="20sp"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="330dp"
		android:textColor="#999999"
		android:text="@string/start_to_scan_some_barcodes"/>
	<Button
		android:id="@+id/btn_add_now"
		android:layout_width="150dp"
		android:layout_height="50dp"
		android:textSize="20sp"
		android:background="@drawable/button_shape"
		android:layout_marginTop="400dp"
		android:layout_centerHorizontal="true"
		android:textColor="#ffffff"
		android:textAllCaps="false"
		android:text="@string/add_now"/>

</RelativeLayout>